--- a/04-pipeline-ml-ci-cd/config.yaml
+++ b/04-pipeline-ml-ci-cd/config.yaml
@@ -1,7 +1,7 @@
 main:
   # mlflow_tracking_url: "http://localhost:7755/" # para Docker
-  mlflow_tracking_url: null # para github
-  experiment_name: deploy_genre_classification
+  mlflow_tracking_url: null # para Github
+  experiment_name: deploy-genre-classification
   execute_steps:
     - download
     - preprocess
@@ -14,7 +14,7 @@ main:
   # pseudo-random operations
   random_seed: 42
 data:
-  file_url: "https://github.com/cesarcharallaolazo/mlflow_pipeline/blob/master/_data/genres_mod.parquet?raw=true"
+  file_url: "https://github.com/alangrosso/mlflow-pipeline/blob/main/data/genres_mod.parquet?raw=true"
   reference_dataset: "preprocessed_data.csv"
   # Threshold for Kolomorov-Smirnov test
   ks_alpha: 0.05
@@ -27,9 +27,9 @@ random_forest_pipeline:
   random_forest:
     n_estimators: 100
     criterion: 'gini'
-    max_depth: 5
+    max_depth: 3
     min_samples_split: 0.20
-    min_samples_leaf: 0.15
+    min_samples_leaf: 0.20
     min_weight_fraction_leaf: 0.0
     max_features: 'auto'
     max_leaf_nodes: null
