--- a/04-pipeline-ml-ci-cd/.github/workflows/cml.yaml
+++ b/04-pipeline-ml-ci-cd/.github/workflows/cml.yaml
@@ -1,17 +1,19 @@
 name: genre-classification
+
 on: [push]
+
 jobs:
-  run:
+  build:
+    name: 
     runs-on: [ubuntu-latest]
     #container: docker://dvcorg/cml-py3:latest
     #container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     container: docker.io/alangrosso/cml-conda
     steps:
       - uses: actions/checkout@v2
-
       - name: cml_run
         env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.ML_PIPELINE_GITHUB_TOKEN }}
         run: |
           pip3 install mlflow==2.2.0
           mlflow run .
