--- a/04-pipeline-ml-ci-cd/.github/workflows/cml.yaml
+++ b/04-pipeline-ml-ci-cd/.github/workflows/cml.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: [ubuntu-latest]
     #container: docker://dvcorg/cml-py3:latest
     #container: docker://ghcr.io/iterative/cml:0-dvc2-base1
-    container: docker.io/alangrosso/cml-conda
+    container: alangrosso/cml-conda:latest
     steps:
       - uses: actions/checkout@v2
       - name: cml_run
