--- a/04-pipeline-ml-ci-cd/.github/workflows/action.yaml
+++ b/04-pipeline-ml-ci-cd/.github/workflows/action.yaml
@@ -1,14 +1,15 @@
 name: genre-classification
 
 on: [push]
+  Branches: [dev]
 
 jobs:
   build:
-    name: 
     runs-on: [ubuntu-latest]
     #container: docker://dvcorg/cml-py3:latest
     #container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     container: alangrosso/cml-conda:latest
+    
     steps:
       - uses: actions/checkout@v2
       - name: cml_run
