fix(04-pipeline-ml-ci-cd): mover workflow de 04/ a root

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,7 +1,7 @@
 name: genre-classification
 
-on: push
-  branches: dev
+on: [push]
+  branches: [dev]
 
 jobs:
   build:
@@ -17,7 +17,7 @@ jobs:
           repo_token: ${{ secrets.ML_PIPELINE_GITHUB_TOKEN }}
         run: |
           pip3 install mlflow==2.2.0
-          mlflow run .
+          mlflow run 04-pipeline-ml-ci-cd/.
 
           echo "## Model metrics" > report.md
           cat ./evaluate/metrics.txt >> report.md
