--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -6,18 +6,20 @@ on:
       - dev
 
 jobs:
-  build:
+  build: # nombre del job
     runs-on: [ubuntu-latest]
-    #container: docker://dvcorg/cml-py3:latest
-    #container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     container: alangrosso/cml-conda:latest
     
     steps:
-      - name: checkout_repositorio
+      - name: Checkout repositorio
         uses: actions/checkout@v2
+      
+      - name: Setup NodeJS 16
+        uses: actions/setup-node@v2
         with:
           node-version: 16
-      - name: cml_run
+
+      - name: cml-run
         env:
           repo_token: ${{ secrets.ML_PIPELINE_GITHUB_TOKEN }}
         run: |
