--- a/04-pipeline-ml-ci-cd/environment.yml
+++ b/04-pipeline-ml-ci-cd/environment.yml
@@ -4,9 +4,28 @@ channels:
   - defaults
 dependencies:
   - python=3.10
-  - requests=2.31.0
-  - pip=23.2.1
+  # manejo de datos
+  - pandas=1.5.3 
+  - numpy
+  # gráficos
+  # - matplotlib
+  # - seaborn
+  # machine learning
+  # - jupyter
+  # - scikit-learn=1.3.0
+  # - hyperopt
+  # feature engineering
+  # - ydata-profiling
+  # - feature_engine
+  # - imbalanced-learn
+  # utils
+  # - ipykernel
+  # - ipython
+  # - virtualenv==20.17.1
+  - requests
+  - pip
+  # mlflow
   - mlflow=2.2.0
   - hydra-core=1.3.2
   - pip:
-      - hydra-joblib-launcher==1.2.0 
+      - hydra-joblib-launcher==1.2.0
