--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -24,7 +24,7 @@ jobs:
           repo_token: ${{ secrets.ML_PIPELINE_GITHUB_TOKEN }}
         run: |
           export HYDRA_FULL_ERROR=1
-          pip3 install mlflow==2.2.0
+          pip3 install pandas==1.5.3 numpy mlflow==2.2.0 hydra-core==1.3.2 hydra-joblib-launcher==1.2.0
           mlflow run 04-pipeline-ml-ci-cd/.
 
           echo "## Model metrics" > report.md
