--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build: # nombre del job
-    runs-on: [ubuntu-latest]
+    runs-on: [ubuntu:20.04] # latest
     container: alangrosso/cml-conda:latest
     
     steps:
@@ -23,8 +23,9 @@ jobs:
         env:
           repo_token: ${{ secrets.ML_PIPELINE_GITHUB_TOKEN }}
         run: |
+          sudo apt-get update
           export HYDRA_FULL_ERROR=1
-          pip3 install pandas==1.5.3 numpy mlflow==2.2.0 hydra-core==1.3.2 hydra-joblib-launcher==1.2.0
+          pip3 install pandas==1.5.3 numpy==1.23.5 mlflow==2.2.0 hydra-core==1.3.2 hydra-joblib-launcher==1.2.0
           mlflow run 04-pipeline-ml-ci-cd/.
 
           echo "## Model metrics" > report.md
