--- a/04-pipeline-ml-ci-cd/check_data/conda.yml
+++ b/04-pipeline-ml-ci-cd/check_data/conda.yml
@@ -3,10 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8
-  - pandas=1.2.3
-  - pip=20.3.3
+  - python=3.10 # 3.8
+  - pandas=1.5.3 # 1.2.3
+  - numpy=1.23.5
+  - pip=23.2.1 # 20.3.3
   - pytest=6.2.2
   - scipy=1.6.1
-  - mlflow=1.26.0
+  - mlflow=2.2.0 # 1.26.0
   - boto3=1.23.5
