--- a/04-pipeline-ml-ci-cd/config.yaml
+++ b/04-pipeline-ml-ci-cd/config.yaml
@@ -28,10 +28,10 @@ random_forest_pipeline:
     n_estimators: 100
     criterion: 'gini'
     max_depth: 3
-    min_samples_split: 25
-    min_samples_leaf: 20
+    min_samples_split: 0.25
+    min_samples_leaf: 0.20
     min_weight_fraction_leaf: 0.0
-    max_features: 'auto'
+    # max_features: 'auto'
     max_leaf_nodes: null
     min_impurity_decrease: 0.0
     min_impurity_split: null
