--- a/04-pipeline-ml-ci-cd/environment.yml
+++ b/04-pipeline-ml-ci-cd/environment.yml
@@ -5,8 +5,8 @@ channels:
 dependencies:
   - python=3.10
   # manejo de datos
-  - pandas=1.5.3 
-  - numpy
+  - pandas=1.5.3  
+  - numpy=1.23.5
   # gráficos
   # - matplotlib
   # - seaborn
