--- a/04-pipeline-ml-ci-cd/preprocess/conda.yml
+++ b/04-pipeline-ml-ci-cd/preprocess/conda.yml
@@ -3,9 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8
-  - pandas=1.2.3
-  - pip=20.3.3
-  - pyarrow=2.0
-  - mlflow=1.26.0
-  - boto3=1.23.5
+  - python=3.10 # 3.8
+  - pandas=1.5.3 # 1.2.3
+  - numpy=1.23.5
+  - pip=23.2.1 # 20.3.3
+  - pyarrow=11.0.0 # 2.0
+  - mlflow=2.2.0 # 1.26.0
+  - boto3=1.28.14 # 1.23.5
