--- a/04-pipeline-ml-ci-cd/random_forest/conda.yml
+++ b/04-pipeline-ml-ci-cd/random_forest/conda.yml
@@ -3,14 +3,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10 # 3.8
-  - pandas=1.5.3 # 1.2.3
-  - numpy=1.23.5
-  - scikit-learn=1.3.0 # 0.24.2
-  - matplotlib=3.7.2 # 3.2.2
-  - plotly=5.10.0 # 4.4.1
-  - pillow=9.3.0 # 8.1.2
-  - mlflow=2.2.0 # 1.26.0
-  - boto3=1.28.14 # 1.23.5
+  - python=3.8
+  - pandas=1.2.3
+  - numpy=1.16.5
+  - scikit-learn=0.24.2
+  - matplotlib=3.2.2
+  - plotly=4.4.1
+  - pillow=8.1.2
+  - mlflow=1.26.0
+  - boto3=1.23.5
   - pip:
       - omegaconf==2.0.6
