--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -24,8 +24,9 @@ jobs:
           repo_token: ${{ secrets.ML_PIPELINE_GITHUB_TOKEN }}
         run: |
           # sudo apt-get update
-          export HYDRA_FULL_ERROR=1
-          pip3 install pandas==1.2.3 numpy==1.16.5 mlflow==1.26.0
+          # export HYDRA_FULL_ERROR=1
+          pip3 install --upgrade protobuf==3.20.0
+          pip3 install mlflow==1.26.0 # pandas==1.2.3 numpy==1.16.5
           mlflow run 04-pipeline-ml-ci-cd/.
           # mlflow run 04-pipeline-ml-ci-cd/. -P hydra_options="-m random_forest_pipeline.random_forest.n_estimators=60,80 random_forest_pipeline.random_forest.max_depth=range(3,11,4) random_forest_pipeline.random_forest.min_samples_split=15,30"
 
