fix(04-pipeline-ml-ci-cd): agregar HYDRA_FULL_ERROR en cml.yaml

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -24,7 +24,7 @@ jobs:
           repo_token: ${{ secrets.ML_PIPELINE_GITHUB_TOKEN }}
         run: |
           # sudo apt-get update
-          # export HYDRA_FULL_ERROR=1
+          export HYDRA_FULL_ERROR=1
           pip3 install --upgrade protobuf==3.20.0
           pip3 install mlflow==1.26.0 # pandas==1.2.3 numpy==1.16.5
           mlflow run 04-pipeline-ml-ci-cd/.
