--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build: # nombre del job
-    runs-on: [ubuntu-20.04] # latest
+    runs-on: [ubuntu-latest] # latest 20.04
     container: alangrosso/cml-conda:latest
     
     steps:
@@ -26,7 +26,7 @@ jobs:
           # sudo apt-get update
           export HYDRA_FULL_ERROR=1
           pip3 install --upgrade protobuf==3.20.0
-          pip3 install mlflow==1.26.0 # pandas==1.2.3 numpy==1.16.5
+          pip3 install mlflow==1.26.0 # pandas==1.2.3 numpy # ==1.16.5
           mlflow run 04-pipeline-ml-ci-cd/.
           # mlflow run 04-pipeline-ml-ci-cd/. -P hydra_options="-m random_forest_pipeline.random_forest.n_estimators=60,80 random_forest_pipeline.random_forest.max_depth=range(3,11,4) random_forest_pipeline.random_forest.min_samples_split=15,30"
 
