--- a/04-pipeline-ml-ci-cd/preprocess/conda.yml
+++ b/04-pipeline-ml-ci-cd/preprocess/conda.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python=3.8
   - pandas=1.2.3
-  - numpy=1.16.5
+  # - numpy=1.16.5
   - pip=20.3.3
   - pyarrow=2.0
   - mlflow=1.26.0
