--- a/04-pipeline-ml-ci-cd/random_forest/conda.yml
+++ b/04-pipeline-ml-ci-cd/random_forest/conda.yml
@@ -5,7 +5,8 @@ channels:
 dependencies:
   - python=3.8
   - pandas=1.2.3
-  # - numpy=1.16.5
+  # - numpy=1.20.0
+  - pip=20.3.3
   - scikit-learn=0.24.2
   - matplotlib=3.2.2
   - plotly=4.4.1
