--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -23,15 +23,13 @@ jobs:
         env:
           repo_token: ${{ secrets.ML_PIPELINE_GITHUB_TOKEN }}
         run: |
-          # sudo apt-get update
           export HYDRA_FULL_ERROR=1
           pip3 install --upgrade protobuf==3.20.0
           pip3 install mlflow==1.26.0
-          touch 04-pipeline-ml-ci-cd/evaluate/metrics.txt
           mlflow run 04-pipeline-ml-ci-cd/.
           
           echo "## Model metrics" > report.md
-          cat ./evaluate/metrics.txt >> report.md
+          cat 04-pipeline-ml-ci-cd/evaluate/metrics.txt >> report.md
 
           echo "## Confusion Matrix Test Dataset" >> report.md
 
