--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build: # nombre del job
-    runs-on: [ubuntu-latest] # latest 20.04
+    runs-on: [ubuntu-latest]
     container: alangrosso/cml-conda:latest
     
     steps:
@@ -19,21 +19,25 @@ jobs:
         with:
           node-version: 16
 
-      - name: cml-run
+      - name: Ejecutar MLflow cml-run
         env:
           repo_token: ${{ secrets.ML_PIPELINE_GITHUB_TOKEN }}
         run: |
+          # Configurar la variable de entorno para mostrar errores completos de Hydra
           export HYDRA_FULL_ERROR=1
+          
+          # Actualizar e instalar
           pip3 install --upgrade protobuf==3.20.0
           pip3 install mlflow==1.26.0
+
+          # Ejecutar workflow
           mlflow run 04-pipeline-ml-ci-cd/.
           
+          # Generar un informe en Markdown
           echo "## Model metrics" > report.md
           cat 04-pipeline-ml-ci-cd/evaluate/metrics.txt >> report.md
-
           echo "## Confusion Matrix Test Dataset" >> report.md
-
-          cml-publish ./evaluate/img/confusion_matrix.png --md >> report.md
-          #cml-publish residuals.png --md >> report.md
-
-          cml-send-comment report.md
+          echo "![](04-pipeline-ml-ci-cd/evaluate/img/confusion_matrix.png)" >> report.md
+          
+          # Enviar el informe
+          cml comment report.md
