fix(05-mlflow-dvc): correción .dvc/config y .gitignore

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,4 @@
 [core]
     remote = dvc-agr
 ['remote "dvc-agr"']
-    url = ../05-mlflow-dvc/external_storage
+    url = /home/agr/DMC/dmc-mlops-immersion/05-mlflow-dvc/external_storage
